# systray

./: .gitignore  Cargo.toml  fix-gir-files.patch
dbusmenu/: Cargo.toml  Gir.toml
dbusmenu-gtk3/: Cargo.toml  Gir.toml
dbusmenu-gtk3/src/auto/: client.rs  menu.rs  mod.rs  versions.txt
dbusmenu-gtk3/sys/: Cargo.toml  Gir.toml  build.rs
dbusmenu-gtk3/sys/src/: lib.rs
dbusmenu-gtk3/sys/tests/: abi.rs  constant.c  layout.c  manual.h
dbusmenu/src/: client.rs  lib.rs  menuitem.rs  prelude.rs  server.rs
dbusmenu/src/auto/: client.rs  menuitem.rs  menuitem_proxy.rs  mod.rs  server.rs  versions.txt
dbusmenu/sys/: Cargo.toml  Gir.toml  build.rs
dbusmenu/sys/src/: lib.rs  manual.rs
dbusmenu/sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: lib.rs  main.rs  notifier_item.rs  notifier_watcher.rs
src/proxy/: notifier_watcher.rs
src/service/: mod.rs  notifier_host.rs  notifier_watcher.rs
systray/: Cargo.toml
systray/src/: lib.rs  main.rs
systray/src/service/: mod.rs  notifier_host.rs  notifier_watcher.rs
