[package]
name = "sni-tray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.3"
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "3", default-features = false, features = ["tokio", "xml"] }
