[package]
name = "sni-tray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.1.7"
derive_more = "0.99.17"
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "3", default-features = false, features = ["tokio", "xml"] }
