[package]
name = "dbusmenu-gtk3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dependencies.ffi]
package = "dbusmenu-gtk3-sys"
path = "./sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk]
package = "gtk"
git = "https://github.com/gtk-rs/gtk3-rs"
