[package]
name = "dbusmenu-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.dbusmenu_glib_0_4]
name = "dbusmenu-glib-0.4"
version = "0.4"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "dbusmenu_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
